@@ -38,7 +38,8 @@
 - Added tk::Arrangement property which allows to arrange some element inside of another.
 - Indicator now supports modern-style drawing.
 - Added tk::MultiLabel widget for drawing vector glyphs.
-- Added tk::TextAdjust property and support of this property by several widgets.
+- Added tk::TextAdjust property and support of this property by several widgets.\
+- Added support of hovers by the tk::Label widget.
 
 TODO:
 - Add custom mouse pointer for fraction actions.
